--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,12 +1,9 @@
 {
-    "extends": "tsconfig/base.json",
-    "compilerOptions": {
-        "outDir": "dist",
-    },
-    "include": [
-        "src/**/*.ts"
-    ],
-    "exclude": [
-        "src/**/*test.ts"
-    ]
+  "extends": "tsconfig/base.json",
+  "compilerOptions": {
+    "outDir": "dist",
+    "baseUrl": "/src"
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/**/*test.ts"]
 }
